// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Conteiner /> should render a Components Conteiner with  height 100% 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  border-bottom: 1rem solid #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<section
  aria-label="Conteiner"
  class="c0"
>
  Children
</section>
`;

exports[`<Conteiner /> should render a Components Conteiner with  height 100vh 1`] = `
.c0 {
  height: 100vh;
  width: 100%;
  border-bottom: 1rem solid #222222;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<section
  aria-label="Conteiner"
  class="c0"
>
  Children
</section>
`;
